syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

import "pki/approved_certificates.proto";
import "pki/proposed_certificate.proto";
import "pki/child_certificates.proto";
import "pki/proposed_certificate_revocation.proto";
import "pki/revoked_certificates.proto";
import "pki/unique_certificate.proto";
import "pki/approved_root_certificates.proto";
import "pki/revoked_root_certificates.proto";
import "pki/approved_certificates_by_subject.proto";
import "pki/rejected_certificate.proto";
import "pki/pki_revocation_distribution_point.proto";
import "pki/pki_revocation_distribution_points_by_issuer_subject_key_id.proto";
import "pki/approved_certificates_by_subject_key_id.proto";
import "pki/noc_root_certificates.proto";
import "pki/noc_certificates.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

// GenesisState defines the pki module's genesis state.
message GenesisState {
  repeated ApprovedCertificates approvedCertificatesList = 1 [(gogoproto.nullable) = false];
  repeated ProposedCertificate proposedCertificateList = 2 [(gogoproto.nullable) = false];
  repeated ChildCertificates childCertificatesList = 3 [(gogoproto.nullable) = false];
  repeated ProposedCertificateRevocation proposedCertificateRevocationList = 4 [(gogoproto.nullable) = false];
  repeated RevokedCertificates revokedCertificatesList = 5 [(gogoproto.nullable) = false];
  repeated UniqueCertificate uniqueCertificateList = 6 [(gogoproto.nullable) = false];
  ApprovedRootCertificates approvedRootCertificates = 7;
  RevokedRootCertificates revokedRootCertificates = 8;
  repeated ApprovedCertificatesBySubject approvedCertificatesBySubjectList = 9 [(gogoproto.nullable) = false];
  repeated RejectedCertificate rejectedCertificateList = 10 [(gogoproto.nullable) = false];
  repeated PkiRevocationDistributionPoint PkiRevocationDistributionPointList = 11 [(gogoproto.nullable) = false];
  repeated PkiRevocationDistributionPointsByIssuerSubjectKeyID PkiRevocationDistributionPointsByIssuerSubjectKeyIDList = 12 [(gogoproto.nullable) = false];
  repeated ApprovedCertificatesBySubjectKeyId approvedCertificatesBySubjectKeyIdList = 13 [(gogoproto.nullable) = false];
  repeated NocRootCertificates nocRootCertificatesList = 14 [(gogoproto.nullable) = false];
  repeated NocCertificates nocCertificatesList = 15 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
